adicionando novos arquivos e grandes modificações

--- a/api/package.json
+++ b/api/package.json
@@ -2,12 +2,18 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "start":"nodemoon index.js"
+    "dev": "node index",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
+  }
 }
