--- a/api/package.json
+++ b/api/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "path": "^0.12.7"
   }
